Thu May 12 10:46:27 1994  Jeff Law  (law@snake.cs.utah.edu)

	* hppa-tdep.c (skip_trampoline_code): Handle argument relocation
	stubs which return directly to the caller rather than to the stub
	itself.

Wed May 11 20:11:51 1994  Stan Shebs  (shebs@andros.cygnus.com)

	* c-exp.y (yyerror): Display a more informative error message.
	* ch-exp.y (yyerror): Ditto, don't use global yychar.
	* m2-exp.y (yyerror): Ditto.

Tue May 10 11:57:53 1994  Stan Shebs  (shebs@andros.cygnus.com)

	* inflow.c (job_control): Move definition to front of file.

Tue May 10 14:42:37 1994  Ian Lance Taylor  (ian@tweedledumb.cygnus.com)

	* maint.c (print_section_table): Rename SEC_SHARED_LIBRARY to
	SEC_COFF_SHARED_LIBRARY to match corresponding change in bfd.

Fri May  6 13:30:22 1994  Stan Shebs  (shebs@andros.cygnus.com)

	* Makefile.in (kdb): Remove old init.c creation commands.
	* configure.in (sparclite): Match on sparclite*.
	* sparclite/aload.c (main): Only change section addresses for
	a.out format object files.

Fri May  6 13:24:04 1994  Steve Chamberlain  (sac@cygnus.com)

	* config/i386/go32.mh: Define CC.

Fri May  6 11:56:54 1994  Stan Shebs  (shebs@andros.cygnus.com)

	* gdbserver/Makefile.in: Remove irrelevant definitions and
	comments inherited from the gdb Makefile.
	(BFD_DIR, BFD, BFD_SRC, BFD_CFLAGS): Add from gdb Makefile.
	(VERSION): Update to 4.12.3.
	(gdbserver): Remove any existing executable first.
	(distclean, realclean): Remove nm.h.
	* gdbserver/low-lynx.c: Add Sparc Lynx support.
	* gdbserver/low-sparc.c, gdbserver/low-sun3.c (sys/wait.h):
	Don't use absolute pathname.

Thu May  5 12:00:22 1994  Stan Shebs  (shebs@andros.cygnus.com)

	* rs6000-nat.c (vmap_ldinfo): Don't fail if fstat returns an
	error.

Wed May  4 06:56:03 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* infrun.c (proceed, normal_stop, wait_for_inferior), breakpoint.c
	(print_it_normal): Add annotations for the inferior starting and